fix app version icon in app page

--- a/app/templates/frontend/app_detail.html
+++ b/app/templates/frontend/app_detail.html
@@ -281,7 +281,7 @@
                             {% endif %}
                             {% if report.app_version %}
                             <span>
-                                <img src="{{ url_for('static', filename='icons/sailfishos-compatibility.svg') }}" class="sfos-icon mr-1" alt="" aria-hidden="true">
+                                <i class="fas fa-cube" aria-hidden="true"></i>
                                 v{{ report.app_version }}
                             </span>
                             {% endif %}
